--- a/package.json
+++ b/package.json
@@ -40,11 +40,16 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@reown/appkit": "^1.8.11",
+    "@reown/appkit-adapter-ethers": "^1.8.11",
+    "@reown/appkit-adapter-wagmi": "^1.8.11",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
+    "@tanstack/react-query": "^5.90.5",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@wagmi/core": "^2.22.1",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -53,6 +58,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "ethers": "^6.15.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "13.5.1",
@@ -71,6 +77,9 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2",
+    "web3modal": "^1.9.12",
     "zod": "^3.23.8"
   },
   "devDependencies": {
